# FaithLens

./: README.md  pyproject.toml  quickstart.py  requirements.txt
benchmarks/: infer.sh  requirements.txt  test_code.py
benchmarks/data/: aggrefact.jsonl  hover.jsonl
benchmarks/minicheck/: inference.py  minicheck.py  utils.py
faithlens/: faithlens.py  prompts.py  test.py
faithlens/faithlens/: inference.py
training/: activate_vllm.sh
training/sft/: dataset_info.json  sft.yaml  train_llama8b_instruct.sh
training/verl/: model_merge.sh  requirements.txt  rl_training.sh
training/verl/examples/grpo_trainer/: train_faithlens.sh
training/verl/verl/utils/reward_score/: ours_reward_with_reason.py  prompt.py
