[project]
name = "faithlens"
version = "0.1.0"
authors = [
  { name="Shuzheng Si", email="shuzheng.si@deeplang.ai" },
  { name="Qingyi Wang", email="wangqingyi22@m.fudan.edu.cn" }
]
description = "Efficient Fact-Checking of LLMs on Grounding Documents(Faithlens)"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  'License :: OSI Approved :: Apache Software License',
  "Operating System :: OS Independent",
]
dependencies = [
    "vllm==0.12.0",
    "torch",
    "transformers",
    "datasets",
    "pandas",
    "numpy",
    "openai",
    "nltk==3.7",
    "scikit-learn"
]

[tool.setuptools]
packages = ["faithlens"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
